# verusdb

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
example/: main.py  polars_example.py  postgresql_example.py  redis_example.py
tests/: test_client.py  test_polars.py  test_postgresql.py  test_redis.py
verusdb/: __init__.py  client.py  settings.py  utils.py
verusdb/embeddings/: __init__.py  openai.py
verusdb/engines/: __init__.py  polars.py  postgresql.py  redis.py
