[tool.poetry]
name = "verusdb"
version = "0.0.1"
description = ""
authors = ["Roger Naranjo <rogernaranjo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
polars = "^0.18.2"
numpy = "^1.24.3"
openai = "^0.27.8"
redis = "^4.5.5"
psycopg2 = "^2.9.6"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.2"


[tool.poetry.group.dev.dependencies]
python-semantic-release = "^7.34.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "verusdb/__init__.py:__version__",
    "pyproject.toml:version"
]